@@ -24,6 +24,7 @@
  - Removed Function
 
 0.6
+* monitor handling reorganized (notification handling)
 * monitor intervall bugfix #1
 + junit added to build and ant
 + intervall to monitor added
